result/0618-155044/stderr.log
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:156:7: error: redefinition of ‘color_red’
  156 |  void color_red (char *source_path){
      |       ^~~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:80:6: note: previous definition of ‘color_red’ with type ‘void(char *)’
   80 | void color_red (char *source_path){
      |      ^~~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2